*: fix html2canvas font and word spacing issue in iOS10 Safari

--- a/src/less/tidb-planet.less
+++ b/src/less/tidb-planet.less
@@ -16,7 +16,7 @@ body {
   background: radial-gradient(#172d72, #120e34) center no-repeat;
   color: #fff;
   font-size: 16px;
-  font-family: 'Roboto Condensed', Helvetica;
+  font-family: 'Roboto Condensed', "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 }
 
 body,
@@ -87,6 +87,7 @@ div[class^="element-"] {
   body {
     font-size: 14px;
     overflow: hidden;
+    -webkit-text-size-adjust: none;
   }
 
   .nav {
