--- a/src/less/tidb-planet/popup.less
+++ b/src/less/tidb-planet/popup.less
@@ -116,12 +116,17 @@
       margin-left: -15em;
     }
   }
-  
+
   .element-astronaut {
     .popup {
       width: 11em;
       margin-left: -10em;
-      font-size: 85%;
+      top: 2em;
+
+      .popup-content {
+        padding: 0.8em;
+        font-size: 85%;
+      }
     }
   }
 }
