--- a/src/less/tidb-planet/user-info.less
+++ b/src/less/tidb-planet/user-info.less
@@ -224,7 +224,7 @@
               display: block;
               width: 6.5em;
               padding: 0 0.5em;
-              font-family: "Roboto Condensed Bold";
+              font-family: "Roboto Condensed Bold", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
             }
 
             .value {
@@ -241,10 +241,13 @@
         display: flex;
         height: 2.4em;
         align-items: center;
+        justify-content: flex-start;
         margin-bottom: 0.2em;
 
         svg {
-          width: 1.625em;
+          display: block;
+          width: 1.8em;
+          height: auto;
         }
 
         .sep {
@@ -256,7 +259,8 @@
         }
 
         .title {
-          letter-spacing: 1px;
+          width: 9em;
+          font-size: 0.85em;
         }
       }
     }
@@ -272,7 +276,8 @@
       color: #1e2969;
 
       .id-container {
-        font-family: "Roboto Condensed Bold";
+        width: 8em;
+        font-family: "Roboto Condensed Bold", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
         font-size: 0.9em;
         line-height: 1.2;
       }
@@ -320,15 +325,6 @@
 }
 
 .tidb-planet {
-  .text-greetings {
-    position: absolute;
-    top: -13em;
-    left: 50%;
-    margin-left: calc(~"-17em / 2 - 14em");
-    width: 17em;
-    line-height: 1.5;
-  }
-
   .element-astronaut {
     top: -14em;
     left: 50%;
@@ -351,23 +347,16 @@
  */
 @media only screen and (max-width: 768px) {
   .tidb-planet {
-    .text-greetings {
-      top: -6em;
-      margin-left: calc(~"-14em / 2 - 3em");
-      width: 14em;
-      font-size: 1.2em;
-    }
-
     .element-flag {
       top: -4em;
-      margin-left: 7em;
+      margin-left: 8em;
       width: 4em;
       height: 7.2em;
     }
 
     .element-astronaut {
-      left: 55%;
-      top: -5em;
+      left: 58%;
+      top: -8em;
     }
   }
 
@@ -377,11 +366,9 @@
   }
 }
 
-// iPhone 4
+// xs iPhone4
 @media only screen and (max-width: 320px) {
-  .tidb-planet {
-    .text-greetings {
-      top: -5em;
-    }
+  .user-info-container {
+    top: 1.5em;
   }
 }
